fixed nav overflow on mobile devices

--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -28,7 +28,7 @@
     }
   }
   @include breakpoint(one-hand) {
-    font-size:$type-6;
+    font-size:$type-6 - 2px;
   }
 }
 
